----------------------------------------------------------------------
Thu Jul 29 13:56:59 2004                        Michael Jennings (mej)

Added some more debugging for examining package placement.

Remove instroots once building is finished.
----------------------------------------------------------------------
Wed Aug 18 16:49:39 2004                        Michael Jennings (mej)

Clean unpackaged files from perl modules.
----------------------------------------------------------------------
Wed Aug 18 16:59:02 2004                        Michael Jennings (mej)

With these changes, I hope to accomplish the following:
  - Instead of using the directory timestamp for modules, find the
    newest file/directory inside the module.  This should solve the
    problem where packages weren't being noted for rebuild.
  - If the SRPM directory isn't there, get a directory listing.  I'm
    trying to figure out why it keeps disappearing and reappearing.
  - Include .#* and *~ in files nuked by "mzclean" (stupid CVS).
  - Also nuke directories which no longer exist on the server with
    "mzclean."
  - Ignore .* and *~ files when looking for spec files.
  - Error out if a spec file contains an epoch.
----------------------------------------------------------------------
Wed Aug 25 17:34:05 2004                        Michael Jennings (mej)

Mostly small fixes and touch-ups.  I also added more mzimport
debugging so I can determine exactly how gmkurtzer is managing to
screw the pooch. :-)
----------------------------------------------------------------------
Tue Aug 31 12:59:32 2004                        Michael Jennings (mej)

Hopefully this will fix the relative path problems with importing an
FST from the current directory.
----------------------------------------------------------------------
Tue Aug 31 20:25:41 2004                        Michael Jennings (mej)

Oops.  Broke building of PDR's.
----------------------------------------------------------------------